cambio de redirrecciones

--- a/Rompecabezas/levels/level-2/level-2.html
+++ b/Rompecabezas/levels/level-2/level-2.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nivel 2</title>
-    <link rel="stylesheet" href="/Rompecabezas/jquery/jquery-ui.css" />
-    <link rel="stylesheet" href="/Rompecabezas/levels/level-2/style-2.css" />
+    <link rel="stylesheet" href="/jquery/jquery-ui.css" />
+    <link rel="stylesheet" href="/levels/level-2/style-2.css" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -49,7 +49,7 @@
           <button id="reload" class="btn btn-primary w-100">
             Reiniciar juego
           </button>
-          <a href="/Rompecabezas/index.html">
+          <a href="/index.html">
             <button class="btn btn-outline-danger mt-2 w-100">Regresar</button>
           </a>
         </div>
@@ -73,8 +73,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <script src="/Rompecabezas/jquery/jquery.min.js"></script>
-    <script src="/Rompecabezas/jquery/jquery-ui.js"></script>
-    <script src="/Rompecabezas/levels/level-2/script-2.js"></script>
+    <script src="/jquery/jquery.min.js"></script>
+    <script src="/jquery/jquery-ui.js"></script>
+    <script src="/levels/level-2/script-2.js"></script>
   </body>
 </html>
