--- a/Rompecabezas/levels/level-4/level-4.html
+++ b/Rompecabezas/levels/level-4/level-4.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rompecabezas</title>
-    <link rel="stylesheet" href="/jquery/jquery-ui.css" />
-    <link rel="stylesheet" href="/levels/level-4/style-4.css" />
+    <link rel="stylesheet" href="../../jquery/jquery-ui.css" />
+    <link rel="stylesheet" href="style-4.css" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -124,7 +124,7 @@
           <button id="reload" class="btn btn-primary w-100">
             Reiniciar juego
           </button>
-          <a href="/index.html">
+          <a href="../../index.html">
             <button class="btn btn-outline-danger mt-2 w-100">Regresar</button>
           </a>
         </div>
@@ -148,8 +148,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <script src="/jquery/jquery.min.js"></script>
-    <script src="/jquery/jquery-ui.js"></script>
-    <script src="/levels/level-4/script-4.js"></script>
+    <script src="../../jquery/jquery.min.js"></script>
+    <script src="../../jquery/jquery-ui.js"></script>
+    <script src="../level-4/script-4.js"></script>
   </body>
 </html>
